--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -11,6 +11,7 @@
 .userDropdownToggle {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: var(--spacing-2);
   padding: var(--spacing-2);
   border-radius: var(--border-radius-md);
@@ -19,6 +20,24 @@
 
 .userDropdownToggle:hover {
   background-color: var(--bg-medium);
+}
+
+.userInfo {
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-2);
+}
+
+.dropdownArrow {
+  display: flex;
+  align-items: center;
+  font-size: var(--font-size-xl);
+  color: var(--text-secondary);
+  transition: transform var(--transition-normal) ease;
+}
+
+.dropdownArrowOpen {
+  transform: rotate(90deg);
 }
 
 .userAvatar {
@@ -36,13 +55,14 @@
   position: absolute;
   right: 0;
   top: 100%;
-  width: 250px;
+  width: 300px;
   background-color: var(--bg-light);
   border-radius: var(--border-radius-md);
-  box-shadow: var(--shadow-md);
+  box-shadow: var(--shadow-lg);
   margin-top: var(--spacing-2);
   z-index: 10;
   overflow: hidden;
+  border: 1px solid var(--border-color);
 }
 
 .userDropdownHeader {
@@ -67,6 +87,13 @@
 .userDropdownName {
   font-weight: var(--font-weight-semibold);
   color: var(--text-primary);
+  max-width: 210px;
+  white-space: nowrap;
+  /* Evita el salto de línea */
+  overflow: hidden;
+  /* Oculta el exceso de texto */
+  text-overflow: ellipsis;
+  /* Muestra puntos suspensivos */
 }
 
 .userDropdownEmail {
@@ -111,13 +138,14 @@
   padding: var(--spacing-2) var(--spacing-3);
   border: none;
   background: none;
-  color: var(--text-secondary);
+  color: var(--error);
+  /* Color diferente para destacarlo */
   font-weight: var(--font-weight-medium);
   border-radius: var(--border-radius-sm);
 }
 
 .logoutButton:hover {
-  background-color: var(--bg-medium);
+  background-color: var(--error-light);
   color: var(--error);
 }
 
@@ -155,6 +183,10 @@
   .userDropdownMenu {
     width: 280px;
     right: -12px;
+  }
+
+  .dropdownArrow {
+    display: none;
   }
 }
 
