--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,19 @@
   --transition-fast: 150ms;
   --transition-normal: 300ms;
   --transition-slow: 500ms;
+
+  /* Contenedores y anchos */
+  --container-max-width: 1200px;
+  --container-width-sm: 640px;
+  --container-width-md: 768px;
+  --container-width-lg: 1024px;
+  --container-width-xl: 1200px;
+  
+  /* Breakpoints para Media Queries */
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-xl: 1200px;
 }
 
 * {
